@@ -1,8 +1,8 @@
 # Sokoban-Java
 
-1. Download JavaFX
-2. Download the librairy JSONSimple 1.1
-3. Add the lib file from JavaFX to the project librairies in the project structure
-4. Add the JSONSimple.jar file to the project librairies in the project structure
-5. Edit the VM configuration and add this in the VM options : --module-path path\to\JavaFX\lib --add-modules javafx.controls,javafx.fxml,javafx.media
-6. Compile and run the Main file
+How to run :
+1. Download the ZIP containing the files
+2. Open a command terminal and use one of the following commands :
+    - gradlew run : if you are using Windows terminal
+    - ./gradlew run : if you are using MacOS or Linux
+    - .\gradlew run : if you are using Windows PowerShell
